--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="title">
         <h1>在台外籍勞工</h1>
         </div>
-        <div id = "desc1">1.來台外籍勞工逐年成長率。 </div>
+        <div class = "desc">1.來台外籍勞工逐年成長率與台灣失業率。<div id = "desc1">外籍移工真的壓縮到台灣就業機會嗎?</div> </div>
         <div id = "linechart"></div>
         <div id = "timeLine"> </div>
-        <div id = "desc2">2.目前開放外勞輸出國家包括泰國、菲律賓、印尼、馬來西亞及越南、蒙古等六個國家。 </div>
+        <div class = "desc">2.開放外勞輸出國家人數比例。<div id = "desc2"></div> </div>
         <div id = "axis"></div>
         <div id = "MW_in_TW"> </div>
    
